--- a/index.html
+++ b/index.html
@@ -981,16 +981,18 @@ of each drug container to estimate the degradation of the drug.
     <section id="contact" class="section scrollspy full-height">
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
+       <!--
         <p>
           <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
               aria-label="Call Varad">+14805722456</a></a>
         </p>
+        -->
         <p>
           <a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
             data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
               class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com"
-              class="hoverline">vbhogayata@gmail.com</a></a>
+              class="hoverline">gulzar.ace@gmail.com</a></a>
         </p>
         <p>
           <a aria-label="View Varad on GitHub" href="http://github.com/varadbhogayata" target="_blank"
