--- a/index.html
+++ b/index.html
@@ -373,8 +373,8 @@
     <aside class="sidebar" id="sidebar">
         <div class="profile">
             <img src="ProPic.jpg" alt="Md Gulzar Hussain" class="profile-img">
-            <h1>Md Gulzar Hussain</h1>
-            <p>Nanjing University of Information Science & Technology</p>
+            <h2>Md Gulzar Hussain</h2>
+            <!-- <p>Nanjing University of Information Science & Technology</p> -->
             <!-- <a href="mailto:mdgulzar@mail.com">mdgulzar@mail.com</a>
             <a href="https://mdgulzar.hussain" target="_blank">mdgulzar.hussain</a> -->
         </div>
@@ -397,7 +397,7 @@
         <!-- Home/Introduction Section -->
         <section id="home" class="active">
             <h2>Md Gulzar Hussain</h2>
-            <h2>PhD Student | School of Software, Nanjing University of Information Science & Technology</h2>
+            <h2>PhD Candidate | School of Software, Nanjing University of Information Science & Technology</h2>
             
             <p>
                 I am currently pursuing my PhD degree in Computer Application Technology in Nanjing University of Information Science & Technology under supervision of Prof Qing Tian. I have completed my Master's degree in Computer Application Technology at Changzhou University, Jiangsu, China under supervision of Prof Ye Shiren. I served as a Lecturer in the Department of CSE, Green University of Bangladesh from January 2019 to November 2022. I have completed my undergrad study at the Green University of Bangladesh in Computer Science and Engineering.
