intro page para justify

--- a/index.html
+++ b/index.html
@@ -396,15 +396,16 @@
     <main class="main-content">
         <!-- Home/Introduction Section -->
         <section id="home" class="active">
-            <h2>Md Gulzar Hussain</h2>
-            <h2>PhD Candidate | School of Software, Nanjing University of Information Science & Technology</h2>
+            <h2>Md Gulzar Hussain<br>
+                PhD Candidate | School of Software, Nanjing University of Information Science & Technology
+            </h2>
             
-            <p>
+            <p align="justify">
                 I am currently pursuing my PhD degree in Computer Application Technology in Nanjing University of Information Science & Technology under supervision of Prof Qing Tian. I have completed my Master's degree in Computer Application Technology at Changzhou University, Jiangsu, China under supervision of Prof Ye Shiren. I served as a Lecturer in the Department of CSE, Green University of Bangladesh from January 2019 to November 2022. I have completed my undergrad study at the Green University of Bangladesh in Computer Science and Engineering.
             </p>
             
             <div class="research-interests">
-                <h3>Research Interests:</h3>
+                <h2>Research Interests:</h2>
                 <ul>
                     <li>Natural Language Processing</li>
                     <li>Bangla Language Modeling and Processing</li>
