--- a/index.html
+++ b/index.html
@@ -415,7 +415,14 @@
             </div>
             
             <div class="contact-info">
-                <p><strong>Email:</strong> <a href="mailto:gulzar.ace@gmail.com">gulzar.ace@gmail.com</a></p>   
+                <p><strong>Email:</strong> <a href="mailto:gulzar.ace@gmail.com">gulzar.ace@gmail.com</a></p> 
+            <div class="social-links">
+            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fas fa-envelope"></i></a>
+            <a href="#"><i class="fab fa-researchgate"></i></a>
+        </div>  
             </div>
         </section>
         
