--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpg">
     <style>
         :root {
-            --primary-color: #F7F5F2;  /* gray white */
-            --secondary-color: #FAF7F7; /* white */
+            --primary-color: #b9b6b0ca;  /* gray white */
+            --secondary-color: #d0cccce0; /* white */
             --accent-color: #EBF2EF;   /* Red for highlights */
             --text-color: #333;         /* Dark gray for text */
             --light-color: #ecf0f1;     /* Light gray background */
