--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             --primary-color: #b9b6b0ca;  /* gray white */
             --secondary-color: #d0cccce0; /* white */
             --accent-color: #EBF2EF;   /* Red for highlights */
-            --text-color: #333;         /* Dark gray for text */
+            --text-color: #000000;         /* Black text */
             --light-color: #ecf0f1;     /* Light gray background */
             --white: #ffffff;
         }
@@ -382,7 +382,7 @@
         <div class="social-links">
                 <a href="mailto:gulzar.ace@gmail.com"><i class="fa-solid fa-envelope"></i></a>
                 <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-google-scholar"></i></a>
+                <a href="#"><i class="fab fa-google-scholar"></i></a>
                 <a href="#"><i class="fab fa-researchgate"></i></a>
         </div> 
         
