--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         :root {
             --primary-color: #2f2f2eca;  /* gray white */
             --secondary-color: #434141e0; /* white */
-            --accent-color: #EBF2EF;   /* Red for highlights */
+            --accent-color: #868a88;   /* Red for highlights */
             --text-color: #000000;         /* Black text */
             --light-color: #ecf0f1;     /* Light gray background */
             --white: #ffffff;
@@ -36,7 +36,7 @@
             width: 280px;
             background-color: var(--primary-color);
             color: white;
-            padding: 1rem 1.5rem;
+            padding: 0rem 1.5rem;
             position: fixed;
             height: 100vh;
             overflow-y: auto;
