--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             width: 280px;
             background-color: var(--primary-color);
             color: white;
-            padding: 0rem 1.5rem;
+            padding: 2rem 1.5rem;
             position: fixed;
-            height: 100vh;
+            height: 80vh;
             overflow-y: auto;
             transition: all 0.3s;
             z-index: 1000;
@@ -170,7 +170,7 @@
         
         /* Home Section - Matches your introduction */
         #home {
-            text-align: left;
+            text-align: justify;
             padding: 2.5rem;
         }
         
