--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         
         /* Sidebar Styles - Matches your screenshot's left panel */
         .sidebar {
-            width: 280px;
+            width: 250px;
             background-color: var(--primary-color);
             color: white;
-            padding: 2rem 1.0rem;
+            padding: 1rem 1rem;
             position: fixed;
             height: 100vh;
-            overflow-y: auto;
+            overflow-y: visible;
             transition: all 0.3s;
             z-index: 1000;
         }
@@ -57,7 +57,7 @@
             border-radius: 50%;
             object-fit: cover;
             border: 5px solid var(--accent-color);
-            margin-bottom: 1rem;
+            margin-bottom: 0.5rem;
         }
         
         .profile h1 {
