--- a/index.html
+++ b/index.html
@@ -43,12 +43,16 @@
             transition: all 0.3s;
             z-index: 1000;
         }
+
+        .social-links {
+            margin-top: 1rem;
+        }
         
         .profile {
             text-align: center;
-            margin-bottom: 2rem;
+            margin-bottom: 1rem;
             border-bottom: 1px solid rgba(255,255,255,0.1);
-            padding-bottom: 1.5rem;
+            padding-bottom: 1rem;
         }
         
         .profile-img {
