--- a/index.html
+++ b/index.html
@@ -433,10 +433,14 @@
             <h2>Professional Experience</h2>
             <div class="timeline">
                 <div class="timeline-item">
-                    <div class="timeline-date">2022 - Present</div>
-                    <h3 class="timeline-title">PhD Researcher</h3>
-                    <p class="timeline-subtitle">Nanjing University of Information Science & Technology</p>
-                    <p>Conducting research in Computer Application Technology with focus on Natural Language Processing and Bangla Language Modeling.</p>
+                    <div class="timeline-date">17 January, 2019- 30 November, 2022</div>
+                    <h3 class="timeline-title">Lecturer</h3>
+                    <p class="timeline-subtitle">Dept. of Computer Science and Engineering,<br>Green University of Bangladesh</p>
+                    <p>Conducting classes
+                        Preparing Lesson Plans and Outcomes
+                        Preparing class lectures and lab manuals
+                        Resource sharing through www.piazza.com & Google Classroom
+                        Advising assigned students throughout the semesters</p>
                 </div>
                 
                 <div class="timeline-item">
