--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             height: 150px;
             border-radius: 50%;
             object-fit: cover;
-            border: 5px solid var(--accent-color);
+            /* border: 5px solid var(--accent-color); */
             margin-bottom: 0.5rem;
         }
         
