--- a/index.html
+++ b/index.html
@@ -519,22 +519,38 @@
             <h2>Research Projects</h2>
             
             <div class="project">
-                <h3 class="project-title">Bangla Language Processing Framework</h3>
+                <h3 class="project-title">Bangla Speech Emotion Detection based on Audio Features using Machine Learning Classifiers.</h3>
                 <div class="project-meta">
-                    <span>PhD Research Project | 2022-Present</span>
+                    <span>Role: Principal Investigator | Grant No: GUBRG/6/2021 | May 9th 2022 to August 30th, 2023</span>
                 </div>
                 <p class="project-description">
-                    Developing novel approaches for Bangla language understanding and generation using transformer-based architectures.
+                    Funded by: Center for Research Innovation and Transformation (CRIT), Green University of Bangladesh<br>
+                    Amount: BDT 67,000/=<br>
+                    Publication: <a herf="http://doi.org/10.11591/ijeecs.v37.i3.pp2044-2057">BANSpEmo: A Bangla Emotional Speech Recognition Dataset.</a>
                 </p>
             </div>
             
             <div class="project">
-                <h3 class="project-title">Cross-lingual Transfer Learning</h3>
+                <h3 class="project-title">Simplifying the Boolean Equation based on Simulation System using Karnaugh Mapping Tool in Digital Circuit Design.</h3>
                 <div class="project-meta">
-                    <span>Master's Thesis Project | 2018-2019</span>
+                    <span>Role: Co-Investigator and Research Assistant | Grant No: GUBRG/4/2019 | August 25th 2020 to December 25th 2020</span>
                 </div>
                 <p class="project-description">
-                    Investigated transfer learning techniques for low-resource languages using multilingual embeddings.
+                    Funded by: Center for Research Innovation and Transformation (CRIT), Green University of Bangladesh<br>
+                    Amount: BDT 40,000/=<br>
+                    Publication: <a herf="https://www.banglajol.info/index.php/GUBJSE/article/view/54025">Simplifying the Boolean Equation Based on Simulation System using Karnaugh Mapping Tool in Digital Circuit Design</a>
+                </p>
+            </div>
+
+            <div class="project">
+                <h3 class="project-title">Okkhor Chino (Classification of Bangla Alphabets Phoneme based on Audio Features)</h3>
+                <div class="project-meta">
+                    <span>Role: Co-Investigator and Research Assistant | Grant No: GUBRG/3/2019 | March 1st 2020 to December 31st 2020</span>
+                </div>
+                <p class="project-description">
+                    Funded by: Center for Research Innovation and Transformation (CRIT), Green University of Bangladesh<br>
+                    Amount: BDT 40,000/=<br>
+                    Publication: <a herf="https://ieeexplore.ieee.org/abstract/document/9528088">Classification of Bangla Alphabets Phoneme based on Audio Features using MLPC & SVM.</a>
                 </p>
             </div>
         </section>
