project link update

--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                 <p class="project-description">
                     Funded by: Center for Research Innovation and Transformation (CRIT), Green University of Bangladesh<br>
                     Amount: BDT 67,000/=<br>
-                    Publication: <a herf="http://doi.org/10.11591/ijeecs.v37.i3.pp2044-2057" class="pub-title-link">BANSpEmo: A Bangla Emotional Speech Recognition Dataset.</a>
+                    Publication: <a href="http://doi.org/10.11591/ijeecs.v37.i3.pp2044-2057" class="pub-title-link">BANSpEmo: A Bangla Emotional Speech Recognition Dataset.</a>
                 </p>
             </div>
             
@@ -539,7 +539,7 @@
                 <p class="project-description">
                     Funded by: Center for Research Innovation and Transformation (CRIT), Green University of Bangladesh<br>
                     Amount: BDT 40,000/=<br>
-                    Publication: <a herf="https://www.banglajol.info/index.php/GUBJSE/article/view/54025" class="pub-title-link">Simplifying the Boolean Equation Based on Simulation System using Karnaugh Mapping Tool in Digital Circuit Design</a>
+                    Publication: <a href="https://www.banglajol.info/index.php/GUBJSE/article/view/54025" class="pub-title-link">Simplifying the Boolean Equation Based on Simulation System using Karnaugh Mapping Tool in Digital Circuit Design</a>
                 </p>
             </div>
 
@@ -551,7 +551,7 @@
                 <p class="project-description">
                     Funded by: Center for Research Innovation and Transformation (CRIT), Green University of Bangladesh<br>
                     Amount: BDT 40,000/=<br>
-                    Publication: <a herf="https://ieeexplore.ieee.org/abstract/document/9528088" class="pub-title-link">Classification of Bangla Alphabets Phoneme based on Audio Features using MLPC & SVM.</a>
+                    Publication: <a href="https://ieeexplore.ieee.org/abstract/document/9528088" class="pub-title-link">Classification of Bangla Alphabets Phoneme based on Audio Features using MLPC & SVM.</a>
                 </p>
             </div>
         </section>
