--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             transform: scale(1.1); /* Slightly enlarge on hover */
         }
         
-        
+
         .profile {
             text-align: center;
             margin-bottom: 0.5rem;
@@ -609,19 +609,19 @@
             <h3>JOURNAL ARTICLES</h3>
             <ol class="publication-list">
                 <li>
-                    Babe Sultana, <strong>Md Gulzar Hussain</strong>, Mahmuda Rahman "<strong>BanSpEmo</strong>: a Bangla audio dataset for speech emotion recognition and its baseline evaluation", <em>Indonesian Journal of Electrical Engineering and Computer Science, Volume 37, Issue 3, March 2025, pages 2044-2057</em>. [<a href="#">link</a>]
+                    Babe Sultana, <strong>Md Gulzar Hussain</strong>, Mahmuda Rahman "<strong>BanSpEmo</strong>: a Bangla audio dataset for speech emotion recognition and its baseline evaluation", <em>Indonesian Journal of Electrical Engineering and Computer Science, Volume 37, Issue 3, March 2025, pages 2044-2057</em>. [<a href="http://doi.org/10.11591/ijeecs.v37.i3.pp2044-2057" target="blank">link</a>]
                 </li>
                 <li>
-                    <strong>Md Gulzar Hussain</strong>, and Ye Shiren "<strong>Identifying Alzheimer Disease Dementia Levels Using Machine Learning Methods</strong>", <em>Medical Research Archives, Volume 11, Issue 7.1, July 2023</em>. [<a href="#">link</a>]
+                    <strong>Md Gulzar Hussain</strong>, and Ye Shiren "<strong>Identifying Alzheimer Disease Dementia Levels Using Machine Learning Methods</strong>", <em>Medical Research Archives, Volume 11, Issue 7.1, July 2023</em>. [<a href="https://esmed.org/MRA/mra/article/view/4039" target="blank">link</a>]
                 </li>
                 <li>
-                    <strong>Md Gulzar Hussain</strong>, Babe Sultana, Mahmuda Rahman, Md Rashidul Hasan "<strong>Comparison Analysis of Bangla News Articles Classification using Support Vector Machine & Logistic Regression</strong>", <em>TELKOMNIKA (Telecommunication Computing Electronics and Control) Volume 21, Issue 3, June 2023, pages 584-591</em>. [<a href="#">link</a>]
+                    <strong>Md Gulzar Hussain</strong>, Babe Sultana, Mahmuda Rahman, Md Rashidul Hasan "<strong>Comparison Analysis of Bangla News Articles Classification using Support Vector Machine & Logistic Regression</strong>", <em>TELKOMNIKA (Telecommunication Computing Electronics and Control) Volume 21, Issue 3, June 2023, pages 584-591</em>. [<a href="http://telkomnika.uad.ac.id/index.php/TELKOMNIKA/article/view/23416" target="blank">link</a>]
                 </li>
                 <li>
-                    Md Jahidul Islam, <strong>Md Gulzar Hussain</strong>, Babe Sultana, Mahmuda Rahman, Md Saidur Rahman, Muhammad Aminur Rahaman, "<strong>Simplifying the Boolean Equation Based on Simulation System using Karnaugh Mapping Tool in Digital Circuit Design</strong>", <em>Green University of Bangladesh Journal of Science and Engineering (GUBJSE)</em>, vol. 7, pp. 76-84, Jul. 2021 [<a href="#">link</a>].
+                    Md Jahidul Islam, <strong>Md Gulzar Hussain</strong>, Babe Sultana, Mahmuda Rahman, Md Saidur Rahman, Muhammad Aminur Rahaman, "<strong>Simplifying the Boolean Equation Based on Simulation System using Karnaugh Mapping Tool in Digital Circuit Design</strong>", <em>Green University of Bangladesh Journal of Science and Engineering (GUBJSE)</em>, vol. 7, pp. 76-84, Jul. 2021 [<a href="https://www.banglajol.info/index.php/GUBJSE/article/view/54025" target="blank">link</a>].
                 </li>
                 <li>
-                    <strong>Md Gulzar Hussain</strong>, Tamim Al Mahmud, "<strong>A Technique for Perceiving Abusive Bangla Comments</strong>", <em>Green University of Bangladesh Journal of Science and Engineering (GUBJSE), Volume 4, Issue 1, July 2017</em>. [<a href="#">ResearchGate</a>]
+                    <strong>Md Gulzar Hussain</strong>, Tamim Al Mahmud, "<strong>A Technique for Perceiving Abusive Bangla Comments</strong>", <em>Green University of Bangladesh Journal of Science and Engineering (GUBJSE), Volume 4, Issue 1, July 2017</em>. [<a href="https://www.researchgate.net/publication/337199069_A_Technique_For_Perceiving_Abusive_Bangla_Comments" target="blank">ResearchGate</a>]
                 </li>
             </ol>
         </div>
@@ -630,7 +630,7 @@
             <h3>CONFERENCE PROCEEDINGS</h3>
             <ol class="publication-list">
                 <li>
-                    Babe Sultana, Mahmuda Rahman, and <strong>Md Gulzar Hussain</strong>. "<strong>An Ensemble of Machine Learning Models for Classifying Bangla-English Code-Mixed SMS as Spam or Ham</strong>", <em>2024 27th International Conference on Computer and Information Technology (ICCIT)</em>, 20-22 December 2024, Cox's Bazar, Bangladesh. [<a href="#">link</a>]
+                    Babe Sultana, Mahmuda Rahman, and <strong>Md Gulzar Hussain</strong>. "<strong>An Ensemble of Machine Learning Models for Classifying Bangla-English Code-Mixed SMS as Spam or Ham</strong>", <em>2024 27th International Conference on Computer and Information Technology (ICCIT)</em>, 20-22 December 2024, Cox's Bazar, Bangladesh. [<a href="https://ieeexplore.ieee.org/document/11022421" target="blank">link</a>]
                 </li>
             </ol>
         </div>
