--- a/index.html
+++ b/index.html
@@ -632,6 +632,30 @@
                 <li>
                     Babe Sultana, Mahmuda Rahman, and <strong>Md Gulzar Hussain</strong>. "<strong>An Ensemble of Machine Learning Models for Classifying Bangla-English Code-Mixed SMS as Spam or Ham</strong>", <em>2024 27th International Conference on Computer and Information Technology (ICCIT)</em>, 20-22 December 2024, Cox's Bazar, Bangladesh. [<a href="https://ieeexplore.ieee.org/document/11022421" target="blank">link</a>]
                 </li>
+                <li>
+                    Md Rinku Ali, Choyon Das, Md Masum Billal, Mohammad Samsur Rahman, <strong>Md Gulzar Hussain</strong>, and Jiang Xingfang. "<strong>Lung Cancer Classification with Histopathological Images using Otsu’s Method and CNN</strong>", <em>2024 IEEE International Conference on Computing (ICOCO)</em>, 12-14, December 2024, Kuala Lumpur, Malaysia. [<a href="https://ieeexplore.ieee.org/abstract/document/10928234" target="blank">link</a>]
+                </li>
+                <li>
+                    Md. Parvez Hossain, Md Atikuzzaman, Mahmuda Rahman, Md Abu Rumman Refat, and <strong>Md Gulzar Hussain</strong>. "<strong>Mirror Text Classification from Image using Machine Learning Techniques</strong>", <em>2024 International Conference on Multi-Strategy Learning Environment (ICMSLE)</em>, 12-13, January 2024, Dehradun, India. [<a href="https://link.springer.com/chapter/10.1007/978-981-97-1488-9_14" target="blank">link</a>]
+                </li>
+                <li>
+                    Sajadul Islam, Nusrat Jahan Jyoti, Md. Solaiman Mia, and <strong>Md Gulzar Hussain</strong>. "<strong>Fake Website Detection Using Machine Learning Algorithms</strong>", <em>2023 International Conference on Digital Applications, Transformation & Economy (ICDATE)</em>, 14-16 July 2023, Miri, Malaysia. [<a href="https://ieeexplore.ieee.org/abstract/document/10248584/" target="blank">link</a>]
+                </li>
+                <li>
+                    Shekh Minhaz Uddin Deep, Md Mosharof Hosen and Mohimatun Nisa, <strong>Md Gulzar Hussain</strong>, and Ye Shiren. "<strong>E-Voting System Improvised by Blockchain Technology: A Case Study</strong>", <em>2023 International Conference on Digital Applications, Transformation & Economy (ICDATE)</em>, 14-16 July 2023, Miri, Malaysia. [<a href="https://ieeexplore.ieee.org/abstract/document/10248479/" target="blank">link</a>]
+                </li>
+                <li>
+                    Tamal Ahmed, Shawly Folia Mukta, Tamim Al Mahmud, Sakib Al Hasan, <strong>Md Gulzar Hussain</strong>. "<strong>Bangla Text Emotion Classification using LR, MNB and MLP with TF-IDF & CountVectorizer</strong>", <em>2022 26th International Computer Science and Engineering Conference (ICSEC)</em>, 21-23 December 2022, Kasetsart University, Sakon Nakhon, Thailand. [<a href="https://ieeexplore.ieee.org/abstract/document/10049341" target="blank">link</a>]
+                </li>
+                <li>
+                    Sakib Al Hasan, Wang Ruiqin, and <strong>Md Gulzar Hussain</strong>. "<strong>Clustering Analysis of Bangla News Articles with TF-IDF & CV Using Mini-Batch K-Means and K-Means</strong>", <em>2022 IEEE International Conference on Cybernetics and Computational Intelligence (CyberneticsCom)</em>, 16-18 June, 2022, Malang, Indonesia. [<a href="https://ieeexplore.ieee.org/abstract/document/9865339" target="blank">link</a>]
+                </li>
+                <li>
+                    Mehrab Zaman Chowdhury, Joy Protim, <strong>Md Gulzar Hussain</strong>, Ahmed Iqbal Pritom. "<strong>Identifying Ranked Features through Optimized Selection Procedure towards Achieving Improved Accuracy in Diabetes Detection</strong>", <em>International Conference on Sciences and Technology (ICOSTECH)</em>, 3-4 February 2022, Batam, Indonesia. [<a href="https://ieeexplore.ieee.org/abstract/document/9829069" target="blank">link</a>]
+                </li>
+                <li>
+                    Sakib Al Hasan, <strong>Md Gulzar Hussain</strong>, Joy Protim, Md Mostafizur Rahman, Nawshad Fahim, Mehrab Zaman Chowdhury, Ahmed Iqbal Pritom. "<strong>Classification of Multi-Labeled Text Articles with Reuters Dataset using SVM</strong>", <em>International Conference on Sciences and Technology (ICOSTECH)</em>, 3-4 February 2022, Batam, Indonesia. [<a href="https://ieeexplore.ieee.org/abstract/document/9829153/" target="blank">link</a>]
+                </li>
             </ol>
         </div>
     </section>
