--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
         .publication-list li {
             counter-increment: pub-counter;
-            margin-bottom: 1rem;
+            margin-bottom: 0.3rem;
             position: relative;
             padding-left: 1rem;
             text-align: justify;
@@ -655,6 +655,36 @@
                 </li>
                 <li>
                     Sakib Al Hasan, <strong>Md Gulzar Hussain</strong>, Joy Protim, Md Mostafizur Rahman, Nawshad Fahim, Mehrab Zaman Chowdhury, Ahmed Iqbal Pritom. "<strong>Classification of Multi-Labeled Text Articles with Reuters Dataset using SVM</strong>", <em>International Conference on Sciences and Technology (ICOSTECH)</em>, 3-4 February 2022, Batam, Indonesia. [<a href="https://ieeexplore.ieee.org/abstract/document/9829153/" target="blank">link</a>]
+                </li>
+                <li>
+                    <strong>Md Gulzar Hussain</strong>, and Ye Shiren. "<strong>Recognition of Covid-19 Disease utilizing X-ray Imaging of the Chest using CNN</strong>", <em>2021 International Conference on Computing, Electronics & Communications Engineering (iCCECE)</em>, 16-17 August, 2021, at University of Essex, Southened Campus, UK. [<a href="https://ieeexplore.ieee.org/abstract/document/9534839" target="blank">link</a>]
+                </li>
+                <li>
+                    <strong>Md Gulzar Hussain</strong>, Mahmuda Rahman, Babe Sultana, Ayesha Khatun, and Sakib Al Hasan. "<strong>Classification of Bangla Alphabets Phoneme based on Audio Features using MLPC &SVM</strong>", <em>International Conference on Automation, Control and Mechatronics for Industry 4.0 (ACMI)</em>, 8-9 July 2021, Rajshahi, Bangladesh. [<a href="https://ieeexplore.ieee.org/document/9528088" target="blank">link</a>]
+                </li>
+                <li>
+                    <strong>Md Gulzar Hussain</strong>, Md Rashidul Hasan, Mahmuda Rahman, Joy Protim and Sakib Al Hasan. "<strong>Detection of Bangla Fake News using MNB and SVM Classifier</strong>", <em>2020 International Conference on Computing, Electronics & Communications Engineering (iCCECE)</em>, 17-18 August, 2020, at University of Essex, Southened Campus, UK. [<a href="https://ieeexplore.ieee.org/abstract/document/9231167/" target="blank">link</a>]
+                </li>
+                <li>
+                    Ahmed Iqbal Pritom, <strong>Md Gulzar Hussain</strong>, Mehrab Zaman Chowdhury, Joy Protim. "<strong>A Combined Linguistic-Movement Model based Bengali Text Entry Method for Physically Handicapped People</strong>", <em>2020 IEEE Region 10 Symposium (TENSYMP)</em>, 05-07 June, 2020, Dhaka, Bangladesh. [<a href="https://ieeexplore.ieee.org/abstract/document/9230968/" target="blank">link</a>]
+                </li>
+                <li>
+                    Ayesha Khatun,  <strong>Md Gulzar Hussain</strong>, Md Jahidul Islam, Sumaiya Kabir,  Md Mahin. "<strong>An Emperical Framework of Idioms Translator From Bengali to English: Rule Based Approach</strong>", <em>2020 IEEE Region 10 Symposium (TENSYMP)</em>, 05-07 June, 2020, Dhaka, Bangladesh. [<a href="https://ieeexplore.ieee.org/abstract/document/9230738/" target="blank">link</a>]
+                </li>
+                <li>
+                    Mahmuda Rahman, <strong>Md Gulzar Hussain</strong>, Md Rashidul Hasan, Babe Sultana, Shamima Akter. "<strong>Detection and Segmentation of Breast Tumor from MRI Images Using Image Processing Techniques</strong>", <em>4th International Conference on Computing Methodologies and Communication (ICCMC 2020)</em>, 11-13, March 2020, Erode, India. [<a href="https://ieeexplore.ieee.org/abstract/document/9076419/" target="blank">link</a>]
+                </li>
+                <li>
+                    Tamim Al Mahmud, <strong>Md Gulzar Hussain</strong>, Sumaiya Kabir, Hasnain Ahamd and Mahmudus Sobhan. "<strong>A Keyword Based Technique to Evaluate Broad Question Answer Script</strong>", <em>9th International Conference on Software and Computer Applications (ICSCA 2020)</em>, February 18-21, 2020, Langkawi, Malaysia. [<a href="https://dl.acm.org/doi/abs/10.1145/3384544.3384604" target="blank">link</a>]
+                </li>
+                <li>
+                    Md. Saidur Rahman, Rifat Hasib, Babe Sultana, <strong>Md Gulzar Hussain</strong>, Mahmuda Rahman and Muhammad Aminur Rahaman. "<strong>An Extensive Karnaugh Mapping Tool for Boolean Expression Simplification</strong>", <em>International Conference On Sustainable Technologies for Industry 4.0 (STI 2019)</em>, December 24-25, 2019, at Green University of Bangladesh, Dhaka, Bangladesh. [<a href="https://ieeexplore.ieee.org/abstract/document/9068037/" target="blank">link</a>]
+                </li>
+                <li>
+                    <strong>Md Gulzar Hussain</strong>, Sumaiya Kabir, Tamim Al Mahmud, Ayesha Khatun and Md Jahidul Islam. "<strong>Assessment of Bangla Descriptive Answer Script Digitally</strong>", <em>International Conference on Bangla Speech and Language Processing (ICBSLP)</em>, 27-28 September, 2019, at Shahjalal University of Science and Technology, Sylhet, Bangladesh. [<a href="https://ieeexplore.ieee.org/abstract/document/9084051/" target="blank">link</a>]
+                </li>
+                <li>
+                    <strong>Md Gulzar Hussain</strong>, Tamim Al Mahmud and Waheda Akthar. "<strong>An Approach to Detect Abusive Bangla Text</strong>", <em>International Conference on Innovation in Engineering and Technology (ICIET)</em>, 27-29 December, 2018, at Dhaka University, Dhaka, Bangladesh. [<a href="https://ieeexplore.ieee.org/abstract/document/9084051/" target="blank">link</a>]
                 </li>
             </ol>
         </div>
