--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         }
 
         .publication-category {
-            margin-bottom: 2.5rem;
+            margin-bottom: 2.0rem;
         }
 
         .publication-category h3 {
@@ -751,10 +751,10 @@
         <!-- CV Section -->
         <section id="cv">
             <!-- <h2>Curriculum Vitae</h2> -->
-            <p>My complete academic CV with detailed information about my professional journey, publications, and more.</p>
+            <p>My academic CV with detailed information about my professional journey, publications, and more.</p>
             
             <div class="cv-download">
-                <a href="#" class="cv-button"><i class="fas fa-download"></i> Download Full CV (PDF)</a>
+                <a href="Gulzar_Europass_CV.pdf" class="cv-button"><i class="fas fa-download"></i> Download Full CV (PDF)</a>
             </div>
         </section>
     </main>
