Orcid info added

--- a/index.html
+++ b/index.html
@@ -493,6 +493,7 @@
                 <a href="https://github.com/gulzar09" target="blank"><i class="fab fa-github"></i></a>
                 <a href="https://scholar.google.com/citations?user=DGAGyj0AAAAJ" target="blank"><i class="ai ai-google-scholar"></i></a>
                 <a href="https://www.researchgate.net/profile/Md-Gulzar-Hussain" target="blank"><i class="fab fa-researchgate"></i></a>
+                <a href="https://orcid.org/0000-0002-7191-2088" target="blank"><i class="fa-brands fa-orcid"></i></a>
         </div> 
         
         <ul class="nav-menu">
