--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
         .timeline-item {
             position: relative;
             margin-bottom: 2rem;
+            padding: 1.0rem;
         }
         
         .timeline-item::before {
@@ -290,6 +291,7 @@
             font-style: italic;
             color: var(--secondary-color);
             margin-bottom: 0.5rem;
+            text-align: justify;
         }
 
         /* Publications Section */
