QT profile link update

--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
                 <div class="timeline-date">2024 - Present</div>
                 <h3 class="timeline-title">PhD in Computer Application Technology</h3>
                 <p class="timeline-subtitle">School of Software, Nanjing University of Information Science & Technology, Jiangsu, China</p>
-                <p>Supervisor: Prof. Qing Tian</p>
+                <p>Supervisor: <a href="https://faculty.nuist.edu.cn/tianqing/en/index.htm" target="blank">Prof. Qing Tian</a></p>
             </div>
             
             <div class="timeline-item">
