--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
             position: relative;
             margin-bottom: 2rem;
             padding: 0.2rem;
+            line-height: 1.2;
         }
         
         .timeline-item::before {
