--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
         .research-interests ul {
             list-style-position: inside;
             padding-left: 1rem;
+            line-height: 1.0;
         }
         
         .research-interests li {
