ms prof link add

--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
                 <div class="timeline-date">2022 - 2024</div>
                 <h3 class="timeline-title">M.Sc. in Computer Application Technology</h3>
                 <p class="timeline-subtitle">School of Computer and Artificial Intelligence, Changzhou University, Jiangsu, China</p>
-                <p>Supervisor: Prof. Ye Shiren</p>
+                <p>Supervisor: <a href="http://bigdata.cczu.edu.cn/2020/1117/c16489a242772/page.htm" target="blank">Prof. Ye Shiren</a></p>
             </div>
             
             <div class="timeline-item">
