--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
     
         
         <!-- Activities Section -->
-        <section id="activities">
+        <section align="justify" id="activities">
             <h2>Extra-curricular Activities</h2>
             <li>Selected as Mentor for junior students of Fall'2017, Spring'2018, Summer'2018 Semesters.</li>
             <li>Selected as Programming Secretary of Green University Computer Club for 2017 & 2018 and arranged Internal Programming Contest many times.</li>
