--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                     <div class="timeline-date">17 January, 2019 - 30 November, 2022</div>
                     <h3 class="timeline-title">Lecturer</h3>
                     <p class="timeline-subtitle">Dept. of Computer Science and Engineering, Green University of Bangladesh</p>
-                    <p>Conducting classes,
+                    <p align="justify">Conducting classes,
                         Preparing Lesson Plans and Outcomes,
                         Preparing class lectures and lab manuals,
                         Resource sharing through www.piazza.com & Google Classroom,
@@ -557,7 +557,7 @@
                     <div class="timeline-date">18 May, 2018 - 31 October, 2018</div>
                     <h3 class="timeline-title">Academic Assistant</h3>
                     <p class="timeline-subtitle">Dept. of Computer Science and Engineering, Green University of Bangladesh</p>
-                    <p>Providing academic assistance to Ms. Sumaiya Kabir, Asistant Professor, Department of CSE,
+                    <p align="justify">Providing academic assistance to Ms. Sumaiya Kabir, Asistant Professor, Department of CSE,
                         Preparing Lesson Plans and Outcomes,
                         Preparing class lectures and lab manuals,
                         Advising assigned students throughout the semesters.</p>
