BnBornoNet paper info added

--- a/index.html
+++ b/index.html
@@ -635,6 +635,9 @@
             <h3>CONFERENCE PROCEEDINGS</h3>
             <ol class="publication-list">
                 <li>
+                    <strong>Md Gulzar Hussain</strong>, Babe Sultana, Md Rinku Ali, Choyon Das, and Md Sanzid Ahmed. "<strong>BnBorno-MNet: A MobileNetV2 Architecture for Bangla Handwritten Character Recognition</strong>", <em>2025 International Conference on Quantum Photonics, Artificial Intelligence, and Networking (QPAIN)</em>, 31 July 2025 - 02 August 2025, Rangpur, Bangladesh. [<a href="https://ieeexplore.ieee.org/document/11172142" target="blank">link</a>]
+                </li>
+                <li>
                     Babe Sultana, Mahmuda Rahman, and <strong>Md Gulzar Hussain</strong>. "<strong>An Ensemble of Machine Learning Models for Classifying Bangla-English Code-Mixed SMS as Spam or Ham</strong>", <em>2024 27th International Conference on Computer and Information Technology (ICCIT)</em>, 20-22 December 2024, Cox's Bazar, Bangladesh. [<a href="https://ieeexplore.ieee.org/document/11022421" target="blank">link</a>]
                 </li>
                 <li>
