BD region text journal paper added

--- a/index.html
+++ b/index.html
@@ -614,6 +614,9 @@
             <h3>JOURNAL ARTICLES</h3>
             <ol class="publication-list">
                 <li>
+                    Babe Sultana, S. M. Mirajul Hoque, <strong>Md Gulzar Hussain</strong>, Mohammad Nurul Huda "<strong>BdRegionText</strong>: resource creation and evaluation for Bangla regional text classification with machine learning", <em>Indonesian Journal of Electrical Engineering and Computer Science, Volume 40, Issue 1, October 2025, pages 411-425</em>. [<a href="http://doi.org/10.11591/ijeecs.v40.i1.pp411-425" target="blank">link</a>]
+                </li>
+                <li>
                     Babe Sultana, <strong>Md Gulzar Hussain</strong>, Mahmuda Rahman "<strong>BanSpEmo</strong>: a Bangla audio dataset for speech emotion recognition and its baseline evaluation", <em>Indonesian Journal of Electrical Engineering and Computer Science, Volume 37, Issue 3, March 2025, pages 2044-2057</em>. [<a href="http://doi.org/10.11591/ijeecs.v37.i3.pp2044-2057" target="blank">link</a>]
                 </li>
                 <li>
